Xây dựng UI phần Header #1

--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,4 +1,8 @@
 .wrapper {
+    --search-border-radius: 92px;
+    --search-height: 46px;
+    --search-button-width: 52px;
+
     width: 100%;
     height: var(--default-layout-header-height, 60px);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
@@ -7,6 +11,88 @@
 }
 
 .innner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     height: 100%;
     width: var(--default-layout-width);
+}
+
+.search{
+    display: flex;
+    position: relative;
+    width: 500px;
+    height: var(--search-height);
+    padding-left: 16px;
+    background-color: #f1f1f2;
+    border-radius: 92px;
+    border: 1.5px solid transparent;
+
+    input {
+        flex: 1;
+        height: 100%;
+        color: var(--black);
+        font-size: 1.6rem;
+        background-color: transparent;
+        font-weight: 400;
+        caret-color: var(--primary);
+    }
+
+    input:not(:placeholder-shown) ~ .search-btn{
+        color: #4c4e57;
+    }
+
+    &:hover{
+        border-color: var(--search-color);
+        cursor: pointer;
+    }
+
+    &:hover .search-icon{
+        color: var(--black);
+    }
+
+    &:hover .search-btn{
+        background-color: rgba(22, 24, 35, 0.03);
+        cursor: pointer;
+    }
+
+    &:focus-within{
+        border-color: rgba(22, 24, 35, .2);
+    }
+
+    &::after{
+        content: "";
+        position: absolute;
+        top: 9px;
+        right: var(--search-button-width);
+        height: calc(var(--search-height) - 18px);
+        width: 1px;
+        background-color: rgba(22, 24, 35, .12);
+    }
+}
+
+.clear,
+.loading{
+    position: absolute;
+    right: calc(var(--search-button-width) + 16px);
+    top: 50%;
+    transform: translateY(-50%);
+    color: #a7a7ab;
+}
+
+.search-icon{
+    
+}
+
+.search-btn{
+    width: var(--search-button-width);
+    height: 100%;
+    border-top-right-radius: var(--search-border-radius);
+    border-bottom-right-radius: var(--search-border-radius);
+    color: var(--search-color);
+    font-size: 1.8rem;
+
+    &:active{
+        background-color: rgba(22, 24, 35, 0.06);
+    }
 }
