--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -18,10 +18,19 @@
     width: var(--default-layout-width);
 }
 
+.search, .search-result{
+    width: 500px;
+}
+
+.search-title{
+    color: rgba(22, 24, 35, .5);
+    padding: 5px 12px;
+    font-size: 1.4rem;
+}
+
 .search{
     display: flex;
     position: relative;
-    width: 500px;
     height: var(--search-height);
     padding-left: 16px;
     background-color: #f1f1f2;
