Xây dựng UI phần Header #5

--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -19,6 +19,10 @@
     width: var(--default-layout-width);
 }
 
+.logo {
+    padding-right: 182px;
+}
+
 .search, .search-result{
     width: 500px;
 }
