--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -1,5 +1,5 @@
 // Menu wrapper
-.menu-list{
+.menu-list {
     width: 224px;
     padding: 4px 0;
 
@@ -8,19 +8,42 @@
     }
 }
 
-.menu-popper{
+.menu-popper {
     padding-bottom: 8px;
 }
 
 // Menu items
-.menu-item{
+.menu-item {
     width: 100%;
     justify-content: flex-start;
     border-radius: 0;
-    padding: 10px 8px;
+    font-size: 1.6rem;
+    padding: 10px 4px 10px 12px;
     color: rgba(22, 24, 35, 1);
+    line-height: 1.9rem;
 
     &:hover {
         background-color: rgba(22, 24, 35, 0.03);
     }
+}
+
+// Header
+.header {
+    position: relative;
+    height: 50px;
+    margin-top: -8px;
+}
+
+.back-btn {
+    width: 50px;
+    height: 100%;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.header-title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
