--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -21,6 +21,11 @@
     padding: 10px 4px 10px 12px;
     color: rgba(22, 24, 35, 1);
     line-height: 1.9rem;
+    font-weight: 700;
+
+    &.separate {
+        border-top: 1px solid rgba(22, 24, 35, .12)
+    }
 
     &:hover {
         background-color: rgba(22, 24, 35, 0.03);
