--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -4,13 +4,14 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    font-size: 1.6rem;
+    cursor: pointer;
     min-width: 100px;
     padding: 9px 8px;
     border-radius: 4px;
-    border: 1px solid transparent;
+    font-size: 1.6rem;
     font-weight: 600;
-    cursor: pointer;
+    font-family: 'IBM Plex Sans', sans-serif, TikTokFont;
+    border: 1px solid transparent;
     background-color: var(--white);
     user-select: none;
 
