--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -115,9 +115,28 @@
 }
 
 .action-btn{
+    position: relative;
+    display: flex;
     background-color: transparent;
     padding: 4px 10px;
     cursor: pointer;
+}
+
+.badge{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: -4px;
+    right: 4px;
+    min-width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    font-size: 1.4rem;
+    font-weight: 600;
+    z-index: 9999;
+    background-color: var(--primary);
+    color: var(--white);
 }
 
 .more-btn {
