--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -10,7 +10,7 @@
     border-radius: 4px;
     font-size: 1.6rem;
     font-weight: 600;
-    font-family: 'IBM Plex Sans', sans-serif, TikTokFont;
+    font-family: var(--font-family);
     border: 1px solid transparent;
     background-color: var(--white);
     user-select: none;
