--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -8,6 +8,8 @@
     --text-color: rgb(22, 24, 35);
     --search-color: #b2b2b6;
 
+    --font-family: 'IBM Plex Sans', sans-serif, TikTokFont;
+
     // Default layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1322px;
@@ -24,7 +26,7 @@ html {
 }
 
 body {
-    font-family: 'IBM Plex Sans', sans-serif, TikTokFont;
+    font-family: var(--font-family);
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
