--- a/src/components/Layout/components/Search/Search.module.scss
+++ b/src/components/Layout/components/Search/Search.module.scss
@@ -21,11 +21,12 @@
     input {
         flex: 1;
         height: 100%;
-        color: var(--black);
         font-size: 1.6rem;
-        background-color: transparent;
         font-weight: 400;
+        color: var(--black);
+        background-color: transparent;
         caret-color: var(--primary);
+        font-family: var(--font-family);
     }
 
     input:not(:placeholder-shown) ~ .search-btn {
