Sửa lỗi và hoàn thiện phần Header #2

--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -5,6 +5,7 @@
 }
 
 .container{
+    margin-top: var(--default-layout-header-height);
     padding: 20px 0 26px 16px;
     width: var(--default-layout-width);
     display: flex;
