--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -1,6 +1,8 @@
 .wrapper{
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    max-height: min((100vh - 96px) - 60px, 734px);
+    max-height: min(100vh - 96px - 60px, 734px);
     padding-top: 8px; 
     background: rgb(255, 255, 255);
     box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
