--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -21,6 +21,7 @@
     input {
         flex: 1;
         height: 100%;
+        padding-right: 40px;
         font-size: 1.6rem;
         font-weight: 400;
         color: var(--black);
