--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -15,7 +15,7 @@
     height: var(--default-layout-header-height);
 }
 
-.innner {
+.inner {
     padding: 0 24px 0 16px;
     display: flex;
     align-items: center;
